--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <span><i>MaY</i>, 2020, Helen Fisher</span> <br />
+				<span><i>June/i>, 2020, Helen Fisher</span> <br />
                         </div>
 
                         <img src="image/advbanner1.jpg" alt="advbanner1" />
